Fix layout issues.

--- a/src/app/screen-task/screen-task.component.scss
+++ b/src/app/screen-task/screen-task.component.scss
@@ -9,7 +9,7 @@ h2 {
   margin-right: auto;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin-bottom: 8px;
+  margin-bottom: 2px;
 
   mat-icon {
     position: relative;
