--- a/src/app/screen-tasks/screen-tasks.component.scss
+++ b/src/app/screen-tasks/screen-tasks.component.scss
@@ -29,7 +29,8 @@
 .task-link {
   flex: 1;
   padding: calc((48px - 1.25em) / 2) 0 !important;
-  display: flex !important;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
   align-items: center;
   color: inherit;
   font-weight: normal;
